--- a/blogpost.html
+++ b/blogpost.html
@@ -8,7 +8,8 @@
             <div id="cabecera">
                 Hyperblog 
                 <span id="tagline">Tu blog de 
-                    confianza</span>
+                    cabecera</span>
+    cabecera
     </div id ="post">
         <h1>Este es el titulo atractivo e interesante 
             del post</h1>
