--- a/blogpost.html
+++ b/blogpost.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Bienvenido a Hyperblog</title>
+        <title>Bienvenido a Hyperblog 2.0</title>
         <link rel="stylesheet" href="css/estilos.css" />
     </head>
     <body>
@@ -15,6 +15,7 @@
             del post</h1>
         <p>Y este es el parrafo de inicio donde vamos a explicar
             las cosas increibles que se pueden hacer con ramas</p>
+            <p><img src="imagenes/equipo.jpg" width="100%"/></p>
             <p>Los blos son la mejor forma de compartir
                  información y tus ideas. 
                  Mucho mas que ir a conferencias
